@@ -1,3 +1,8 @@
+Mon Sep 20 10:46:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_codegen.cpp:
+          AMI4CCM doesn't need to access container/context internals
+
 Mon Sep 20 09:32:40 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * tests/Bug_3042_Regression/test.idl:
